# oneclickautofix_rust

./: .gitignore  Cargo.toml
src/: app.rs  command.rs  config.rs  embed.rs  executor.rs  main.rs
