[package]
name = "oneclickautofix"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "oneclickautofix"
path = "src/main.rs"

[dependencies]
eframe     = "0.29"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"
filetime   = "0.2"

[build-dependencies]
winres = "0.1"
ico    = "0.3"

[profile.release]
opt-level = "s"
lto       = true
strip     = "symbols"
